1. Add GeometryType and GeographyType to LogicalType sealed interface with EdgeInterpolation enum. 2. Add LogicalTypeReader cases 17/18 for GEOMETRY/GEOGRAPHY with CRS and edge interpolation parsing. 3. Add geospatialStatistics field (field 7) to ColumnIndex and ColumnIndexReader. 4. Add IntersectsPredicate to FilterPredicate with intersects() factory method. 5. Add GeospatialPredicate to ResolvedPredicate. 6. Add geospatial case to FilterPredicateResolver with GEOMETRY/GEOGRAPHY validation. 7. Add row group bounding box evaluation in RowGroupFilterEvaluator with antimeridian wrapping. 8. Add page-level bounding box based filter evaluation in PageFilterEvaluator. 9. Add Geospatial utility class for shared x-axis overlap logic. 10. Add GeospatialEndToEndTest for full filter pushdown chain with JTS WKB decoding. 11. Add unit tests for spatial predicate evaluation including antimeridian and and/or composition. 12. Add geo-datagen.py for geospatial test data generation. 13. Update usage.md with geospatial column identification and intersects filter pushdown examples.